--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node src/main.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/router": "^12.0.1",
     "chalk": "^5.3.0",
+    "koa": "^2.15.2",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "mysql": "^2.18.1",
@@ -19,6 +21,8 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/koa": "^2.15.0",
+    "@types/koa__router": "^12.0.4",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.11.28",
     "@types/prompts": "^2.4.9"
