--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node src/main.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.0",
+    "@types/mysql": "^2.15.26",
     "@types/node": "^20.11.28",
     "@types/prompts": "^2.4.9"
   }
