--- a/package.json
+++ b/package.json
@@ -10,22 +10,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^5.0.0",
     "@koa/router": "^12.0.1",
-    "chalk": "^5.3.0",
     "koa": "^2.15.2",
+    "koa-bodyparser": "^4.4.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
-    "mysql": "^2.18.1",
-    "prompts": "^2.4.2",
-    "typescript": "^5.4.2",
-    "xlsx": "^0.18.5"
+    "typescript": "^5.4.2"
   },
   "devDependencies": {
     "@types/koa": "^2.15.0",
+    "@types/koa-bodyparser": "^4.3.12",
+    "@types/koa__cors": "^5.0.0",
     "@types/koa__router": "^12.0.4",
     "@types/lodash": "^4.17.0",
-    "@types/mysql": "^2.15.26",
-    "@types/node": "^20.11.28",
-    "@types/prompts": "^2.4.9"
+    "@types/node": "^20.11.28"
   }
 }
