--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/main.ts"
+    "dev": "ts-node src/main.ts",
+    "build": "pnpm tsc",
+    "start": "node ./build/main.js"
   },
   "keywords": [],
   "author": "",
@@ -16,9 +18,10 @@
     "koa-bodyparser": "^4.4.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
-    "typescript": "^5.4.2"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "typescript": "^5.4.3",
     "@types/koa": "^2.15.0",
     "@types/koa-bodyparser": "^4.3.12",
     "@types/koa__cors": "^5.0.0",
