--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node src/main.ts",
-    "build": "pnpm tsc",
+    "build": "npx tsc",
     "start": "node ./build/main.js"
   },
   "keywords": [],
@@ -21,12 +21,12 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "typescript": "^5.4.3",
     "@types/koa": "^2.15.0",
-    "@types/koa-bodyparser": "^4.3.12",
     "@types/koa__cors": "^5.0.0",
     "@types/koa__router": "^12.0.4",
+    "@types/koa-bodyparser": "^4.3.12",
     "@types/lodash": "^4.17.0",
-    "@types/node": "^20.11.28"
+    "@types/node": "^20.11.28",
+    "typescript": "^5.4.3"
   }
 }
