--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "koa-bodyparser": "^4.4.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/koa": "^2.15.0",
+    "@types/koa-bodyparser": "^4.3.12",
     "@types/koa__cors": "^5.0.0",
     "@types/koa__router": "^12.0.4",
-    "@types/koa-bodyparser": "^4.3.12",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.11.28",
     "typescript": "^5.4.3"
