--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "koa-bodyparser": "^4.4.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "openai": "^4.30.0",
     "pre-commit": "^1.2.2",
     "rimraf": "^5.0.5",
+    "ts-node": "^10.9.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
