--- a/vercel.json
+++ b/vercel.json
@@ -10,12 +10,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "dist/main.js"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
+      "dest": "dist/main.js",
       "headers": [{ "key": "Access-Control-Allow-Origin", "value": "*" }]
     }
   ]
