--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
     {
       "src": "/(.*)",
       "dest": "dist/main.js",
-      "headers": [{ "key": "Access-Control-Allow-Origin", "value": "*" }]
+      "headers": { "key": "Access-Control-Allow-Origin", "value": "*" }
     }
   ]
 }
